--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Task Board</title>
+</head>
+
+<body>
+  <header class="p-4 mb-4 text-center border-bottom border-5">
+    <h1 class="display-3">Task Board</h1>
+    <p class="lead">A simple Kanban board for task management</p>
+  </header>
+  <div class="container">
+    <div class="text-center mb-5">
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
+    </div>
+
+
+
 <script src="path/to/dayjs/dayjs.min.js"></script>
 <script>
   dayjs().format()
