--- a/index.html
+++ b/index.html
@@ -27,6 +27,58 @@
 
 
 
+
+
+    <div class="row swim-lanes text-center justify-content-between">
+        <div class="col-12 col-lg-4 d-flex">
+          <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
+            <div class="card-header bg-white">
+              <h2 class="card-title mb-1">To Do</h2>
+            </div>
+            <div class="card-body bg-light">
+              <div id="todo-cards"></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4 d-flex">
+          <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
+            <div class="card-header bg-white">
+              <h2 class="card-title mb-1">In Progress</h2>
+            </div>
+            <div class="card-body bg-light">
+              <div id="in-progress-cards"></div>
+            </div>
+          </div>
+          </div>
+          <div class="col-12 col-lg-4 d-flex">
+            <div id="done" class="card border-light mb-3 lane flex-grow-1">
+              <div class="card-header bg-white">
+                <h2 class="card-title mb-1">Done</h2>
+              </div>
+              <div class="card-body bg-light">
+                <div id="done-cards"></div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  
+    <script src="./assets/js/script.js"></script>
+  </body>
+  
+  </html>
+  
+
+
+
 <script src="path/to/dayjs/dayjs.min.js"></script>
 <script>
   dayjs().format()
