building my form task handled by bootstrap

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     </div>
 
 
+    <div class="modal fade" id="taskModal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="taskModalLabel">Create New Task</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+
+
+
 
 
 
@@ -79,7 +90,4 @@
 
 
 
-<script src="path/to/dayjs/dayjs.min.js"></script>
-<script>
-  dayjs().format()
-</script>
+ 
