--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Task Board</title>
 </head>
@@ -20,95 +19,88 @@
     <h1 class="display-3">Task Board</h1>
     <p class="lead">A simple Kanban board for task management</p>
   </header>
+
   <div class="container">
     <div class="text-center mb-5">
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
 
-
-    <div class="modal fade" id="taskModal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="taskModalLabel">Create New Task</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="newTaskForm" class="p-3">
-                  <div class="row">
-                    <div class="col-6">
-                      <label for="newTaskTitle" class="form-label">Title</label>
-                      <input autocomplete="off" type="text" class="form-control mb-3" id="newTaskTitle" />
-                    </div>
-                    <div class="col-6">
-                      <label for="newTaskDue" class="form-label">Due Date</label>
-                      <input autocomplete="off" type="text" class="form-control mb-3" id="newTaskDue" />
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-12">
-                      <label for="newTaskDetails" class="form-label">Details</label>
-                      <textarea class="form-control mb-5" id="newTaskDetails" rows="3"></textarea>
-                    </div>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#taskModal">Create Task</button>
-                  </div>
-                </form>
+    <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="formModalLabel">Add Task</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="taskForm" class="p-3">
+              <div class="row">
+                <div class="col-6">
+                  <label for="taskTitle" class="form-label">Task Title</label>
+                  <input autocomplete="off" type="text" class="form-control mb-3" id="taskTitle" />
+                </div>
+                <div class="col-6">
+                  <label for="taskDueDate" class="form-label">Task Due Date</label>
+                  <input autocomplete="off" type="text" class="form-control mb-3" id="taskDueDate" />
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-
-
-    <div class="row swim-lanes text-center justify-content-between">
-        <div class="col-12 col-lg-4 d-flex">
-          <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
-            <div class="card-header bg-white">
-              <h2 class="card-title mb-1">To Do</h2>
-            </div>
-            <div class="card-body bg-light">
-              <div id="todo-cards"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4 d-flex">
-          <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
-            <div class="card-header bg-white">
-              <h2 class="card-title mb-1">In Progress</h2>
-            </div>
-            <div class="card-body bg-light">
-              <div id="in-progress-cards"></div>
-            </div>
-          </div>
-          </div>
-          <div class="col-12 col-lg-4 d-flex">
-            <div id="done" class="card border-light mb-3 lane flex-grow-1">
-              <div class="card-header bg-white">
-                <h2 class="card-title mb-1">Done</h2>
+              <div class="row">
+                <div class="col-12">
+                  <label for="taskDescription" class="form-label">Task Description</label>
+                  <textarea class="form-control mb-5" id="taskDescription" rows="3"></textarea>
+                </div>
               </div>
-              <div class="card-body bg-light">
-                <div id="done-cards"></div>
-            </div>
-            </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-success">Add Task</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-  
-    <script src="./assets/js/script.js"></script>
-  </body>
-  
-  </html>
-  
 
+    <div class="row swim-lanes text-center justify-content-between">
+      <div class="col-12 col-lg-4 d-flex">
+        <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
+          <div class="card-header bg-white">
+            <h2 class="card-title mb-1">To Do</h2>
+          </div>
+          <div class="card-body bg-light">
+            <div id="todo-cards"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 d-flex">
+        <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
+          <div class="card-header bg-white">
+            <h2 class="card-title mb-1">In Progress</h2>
+          </div>
+          <div class="card-body bg-light">
+            <div id="in-progress-cards"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 d-flex">
+        <div id="done" class="card border-light mb-3 lane flex-grow-1">
+          <div class="card-header bg-white">
+            <h2 class="card-title mb-1">Done</h2>
+          </div>
+          <div class="card-body bg-light">
+            <div id="done-cards"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
 
- 
+</html>
